# SnoringPony

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SnoringPony.jucer  install.iss  installWin7.iss
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report---core-code-only.md
.github/workflows/: build-dev.yml  build-release.yml  build.yml  discord.yml  sub-build-linux.yml  sub-build-osx.yml  sub-build-win.yml
Builds/LinuxMakefile/: Makefile
Builds/LinuxMakefile/SnoringPony.AppDir/: snoringpony.desktop
Builds/MacOSX/: Icon.icns  Info-App.plist
Builds/MacOSX/SnoringPony.xcodeproj/: project.pbxproj
Builds/MacOSX_CI/: Info-App.plist
Builds/MacOSX_CI/SnoringPony.xcodeproj/: project.pbxproj
Builds/VisualStudio2022/: SnoringPony_App.vcxproj  resources.rc
Builds/VisualStudio2022_CI/: SnoringPony.sln  SnoringPony_App.vcxproj  SnoringPony_App.vcxproj.filters  resources.rc
Builds/VisualStudio2022_Win7CI/: SnoringPony_App.vcxproj  SnoringPony_App.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Package/: SnoringPony.pkgproj
resources/: default.ponylayout
src/: Brain.cpp  Brain.h  Main.cpp  Main.h  MainComponent.cpp  MainComponent.h  MainComponentCommands.cpp  MainIncludes.cpp  MainIncludes.h  MainMenuBarComponent.cpp  MainMenuBarComponent.h  PonyEngine.cpp  PonyEngine.h  UserInputManager.cpp  UserInputManager.h
src/Audio/: AudioPlayer.cpp  AudioPlayer.h  PluginScanner.cpp  PluginScanner.h  PluginSlot.cpp  PluginSlot.h  PluginSlot.mm
src/Audio/ui/: PluginSlotEditor.cpp  PluginSlotEditor.h
src/Cue/: Cue.cpp  Cue.h  CueManager.cpp  CueManager.h
src/Cue/audio/: AudioCue.cpp  AudioCue.h  AudioFile.cpp  AudioFile.h  AudioSlices.cpp  AudioSlices.h  AudioWaveformSlicer.cpp  AudioWaveformSlicer.h
src/Cue/dca/: CharacterRef.cpp  CharacterRef.h  DCAAssignment.cpp  DCAAssignment.h  DCACue.cpp  DCACue.h
src/Cue/editor/: CueEditor.cpp  CueEditor.h
src/Cue/fade/: FadeCue.cpp  FadeCue.h
src/Cue/go/: GoCue.cpp  GoCue.h
src/Cue/music/: MusicCue.cpp  MusicCue.h
src/Cue/obs/: OBSCue.cpp  OBSCue.h  OBSCueRequest.cpp  OBSCueRequest.h
src/Cue/osc/: OSCCue.cpp  OSCCue.h  OSCCueMessage.cpp  OSCCueMessage.h
src/Cue/playlist/: PlaylistCue.cpp  PlaylistCue.h
src/Cue/test/: TestCue.cpp  TestCue.h
src/Cue/ui/: CueEditor.cpp  CueEditor.h
src/CueList/: CueList.cpp  CueList.h  CueListFactory.cpp  CueListFactory.h  CueListManager.cpp  CueListManager.h
src/CueList/ui/: CueListManagerItemUI.cpp  CueListManagerItemUI.h  CueListManagerUI.cpp  CueListManagerUI.h  CueListUI.cpp  CueListUI.h
src/Cuelist/: Cuelist.cpp  Cuelist.h  CuelistFactory.cpp  CuelistFactory.h  CuelistManager.cpp  CuelistManager.h
src/Cuelist/dca/: DCAMixingCuelist.cpp  DCAMixingCuelist.h
src/Cuelist/ui/: CuelistEditor.cpp  CuelistEditor.h  CuelistManagerItemUI.cpp  CuelistManagerItemUI.h  CuelistManagerUI.cpp  CuelistManagerUI.h  CuelistViewUI.cpp  CuelistViewUI.h
src/Deck/ui/: CuesTableModel.cpp  CuesTableModel.h  CuesTableUI.cpp  CuesTableUI.h  DeckUI.cpp  DeckUI.h  DeckViewHeaderUI.cpp  DeckViewHeaderUI.h  DeckViewUI.cpp  DeckViewUI.h  ReorderCuesWindow.cpp  ReorderCuesWindow.h
src/Interface/: Interface.cpp  Interface.h  InterfaceManager.cpp  InterfaceManager.h
src/Interface/action/: GoAction.cpp  GoAction.h  MappingAction.cpp  MappingAction.h  MappingActionFactory.cpp  MappingActionFactory.h  PanicAction.cpp  PanicAction.h  SelectNextCueAction.cpp  SelectNextCueAction.h  SelectPreviousCueAction.cpp  SelectPreviousCueAction.h
src/Interface/audio/: AudioInterface.cpp  AudioInterface.h  AudioOutput.cpp  AudioOutput.h
src/Interface/feedback/: FeedbackItem.cpp  FeedbackItem.h
src/Interface/midi/: MIDIDevice.cpp  MIDIDevice.h  MIDIFeedbackFactory.cpp  MIDIFeedbackFactory.h  MIDIFeedbackItem.cpp  MIDIFeedbackItem.h  MIDIInterface.cpp  MIDIInterface.h  MIDIIsPanickingFeedback.cpp  MIDIIsPanickingFeedback.h  MIDIIsPlayingFeedback.cpp  MIDIIsPlayingFeedback.h  MIDIManager.cpp  MIDIManager.h  MIDIMapping.cpp  MIDIMapping.h  MTCEncoder.h
src/Interface/mixer/: Character.cpp  Character.h  MixerChannel.cpp  MixerChannel.h  MixerConnectionService.cpp  MixerConnectionService.h  MixerFX.cpp  MixerFX.h  MixerInterface.cpp  MixerInterface.h  MixerSettings.h
src/Interface/obs/: OBSCommand.cpp  OBSCommand.h  OBSInterface.cpp  OBSInterface.h
src/Interface/osc/: OSCCommand.cpp  OSCCommand.h  OSCCurrentCueFeedback.cpp  OSCInterface.h  (+14 more)
src/ProjectSettings/: AudioSettings.cpp  AudioSettings.h  ColorPresets.cpp  ColorPresets.h  DecksSettings.cpp  DecksSettings.h  ShowProperties.cpp  ShowProperties.h  VolumePresets.cpp  VolumePresets.h
src/Show/: DecksSettings.cpp  ShowProperties.cpp
src/ui/: AboutWindow.cpp  AboutWindow.h  LookAndFeelTable.cpp  LookAndFeelTable.h  SPAssetManager.cpp  SPAssetManager.h
(+56 files in other folders)
